# cookiecutter_mnist

./: .pre-commit-config.yaml  README.md  check_model.py  close_plots.py  cloudbuild.yaml  environment.yaml  model.pth  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: cml_data.yaml  codecheck.yaml  locust.yaml  pre_commit.yaml  stage_model.yaml  tests.yaml
artifacts/corrupted_mnist_v0/: model.pth
configs/: sweep.yaml
dockerfiles/: api.dockerfile  train.dockerfile  wandb.docker
docs/: mkdocs.yaml
docs/source/: index.md
lightning_logs/version_0/: config.yaml  events.out.tfevents.1736693304.surt.fysik.dtu.dk.959909.0
lightning_logs/version_1/: config.yaml  events.out.tfevents.1736693415.surt.fysik.dtu.dk.960466.0
models/: epoch=8-step=837.ckpt  epoch=9-step=930-v1.ckpt  epoch=9-step=930-v2.ckpt  epoch=9-step=930-v3.ckpt  epoch=9-step=930.ckpt
onnx/: ONNX.py  ONNX_lightning.py  bentofile.yaml  bentoml_client.py  bentoml_service.py  bentoml_service_composition_concurrent.py  bentoml_service_composition_sequential.py  locustfile_bentoml_composition.py  offline_optimize.py  onnx_benchmark.py  onnx_fastapi.py  onnx_runtime.py  report_dynamo_export.sarif
scripts/: auto_register_best_model.py  close_plots.py  iris_classifier.py  link_model.py  link_to_registry.py  load_model_from_registry.py
src/mnist_project/: app.py  data.py  evaluate.py  lightning.py  main.py  (+1 more)
test_api/: database.csv  main.py  post.py  request.py
tests/: test_data.py  test_model.py  test_train_invocation.py
wandb/: latest-run
(+120 files in other folders)
