[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist_project"
version = "0.0.1"
description = "simple mnist neuralnetwork"
authors = [
  { name = "Jonatan", email = "your@email.com" },
]

readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
train = "mnist_project.train:main"
evaluate = "mnist_project.evaluate:app"
iris_classifier = "mnist_project.iris_classifier:app"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "C", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
ignore-decorators = []
property-decorators = []
ignore-var-parameters = false

[tool.coverage.run]
omit = ["tests/*"]
